removing usage of clamp